@@ -2,7 +2,7 @@
  OmegaT 2.3.0
 ----------------------------------------------------------------------
    9 Enhancements
-   4 Bug fixes
+   5 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
 2.3.0 vs. 2.2.3 update 4
@@ -19,7 +19,7 @@
   http://sourceforge.net/support/tracker.php?aid=3311077
 
   - Add .xliff extension to the XLIFF filter
-  http://sourceforge.net/support/tracker.php?aid=3311077
+  http://sourceforge.net/support/tracker.php?aid=3339675
 
   Other enhancements:
 
@@ -47,6 +47,9 @@ with Windows 64-bit
 
   - LaTeX filter: comments are removed from target documents
   http://sourceforge.net/support/tracker.php?aid=3297471
+
+  - Overeager numbered header segmentation rule
+  http://sourceforge.net/support/tracker.php?aid=3308282
 
   - PO filter: when a segment had trailing spaces, it was not visible for 
 translation in OmegaT
